# gi-library-boilerplate

./: Makefile.am  README.md  configure.ac  generate-boilerplate.pl
maman/: Makefile.am  maman-bar.c  maman-bar.h  maman-baz.c  maman-baz.h  maman-ibaz.c  maman-ibaz.h
